2023-07-28T08:06:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5689698514 # 1035
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-28
* notice: last 14d: unq all: 5 22
* notice: prev accum: outdated-unq outdated-all / unq all: 233 777 / 239 801
* notice: next accum: outdated-unq outdated-all / unq all: 234 779 / 239 801
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-07-14] / []

2023-07-27T16:04:19Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5682843482 # 1033
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-27
* notice: last 14d: unq all: 6 24
* notice: prev accum: outdated-unq outdated-all / unq all: 233 777 / 238 795
* notice: next accum: outdated-unq outdated-all / unq all: 233 777 / 239 801
* notice: prev exec diff / last date diff / accum: unq all: +1 +6 -0 -0 / +1 +6 -0 -0 / 1 6
* notice: removed / changed dates: [] / [2023-07-27]

2023-07-26T00:30:10Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5663222860 # 1028
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-26
* notice: last 14d: unq all: 5 18
* notice: prev accum: outdated-unq outdated-all / unq all: 233 777 / 237 793
* notice: next accum: outdated-unq outdated-all / unq all: 233 777 / 238 795
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-07-25]

2023-07-22T00:31:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5627756416 # 1016