@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-28T08:06:39Z",
-  "count_outdated" : 779,
-  "uniques_outdated" : 234,
+  "timestamp" : "2023-08-01T08:07:14Z",
+  "count_outdated" : 783,
+  "uniques_outdated" : 235,
   "count" : 801,
   "uniques" : 239,
   "views" : [
-    {
-      "timestamp": "2023-07-18T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 2, 4 ],
-      "count_decinc": [ 0, 4 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-20T00:00:00Z",
       "count": 8,
