@@ -1,12 +1,7 @@
 {
-  "count": 22,
-  "uniques": 5,
+  "count": 18,
+  "uniques": 4,
   "views": [
-    {
-      "timestamp": "2023-07-18T00:00:00Z",
-      "count": 4,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-07-20T00:00:00Z",
       "count": 8,
